--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "inpm-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
-    "inpm": "./bin/cli.sh"
+    "inpm": "./bin/cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
